--- a/bdv9527_decisiontree.ipynb
+++ b/bdv9527_decisiontree.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "bvo4_decisiontree.ipynb",
+      "name": "bdv9527_decisiontree.ipynb",
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
@@ -25,12 +25,12 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/bvo4/Project-2/blob/main/bvo4_decisiontree.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/bvo4/Project-2/blob/main/bdv9527_decisiontree.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "5s9jyvIgNubB"
       },
@@ -71,9 +71,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3aa867a9-24a3-49f9-cd55-afeabd551f62"
+        "outputId": "2de053ee-b7f2-4099-c1ea-52e7e9a3b1c4"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -140,7 +140,7 @@
       "metadata": {
         "id": "UJZ29vbJPovQ"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -177,7 +177,7 @@
       "metadata": {
         "id": "S2t0z3YVgYYv"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -192,7 +192,7 @@
       "metadata": {
         "id": "VAwl_IRejTEr"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -208,9 +208,9 @@
           "height": 801
         },
         "id": "O-v1Y8fyjcuf",
-        "outputId": "df97be1b-af28-415d-f856-eae2da4db531"
+        "outputId": "86664c97-0bde-4024-b3c9-c7bfef2b0012"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -232,7 +232,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 7
         },
         {
           "output_type": "display_data",
@@ -259,13 +259,13 @@
         "# Function to calculate accuracy\n",
         "def cal_accuracy(X_test, y_test, y_pred):\n",
         "    rounded_labels=np.argmax(X_test, axis=1)\n",
-        "    metrics.confusion_matrix(rounded_labels, y_test)\n",
+        "    metrics.confusion_matrix(y_pred, y_test)\n",
         "\n",
         "    print(\"Confusion Matrix: \",\n",
-        "        confusion_matrix(rounded_labels, y_test))\n",
+        "        confusion_matrix(y_pred, y_test))\n",
         "      \n",
         "    print (\"Accuracy : \",\n",
-        "    accuracy_score(rounded_labels,y_test)*100)\n",
+        "    accuracy_score(y_pred,y_test)*100)\n",
         "\n",
         "#    print(\"Report : \",\n",
         "#    classification_report(rounded_labels, y_pred))\n",
@@ -282,9 +282,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fffb5c37-1873-4c95-bbe3-da8463f160c8"
+        "outputId": "4fa7e1da-0d8b-4da0-a281-b6d9c9b37a9f"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -292,12 +292,12 @@
           "text": [
             "PREDICTION: [4 1 1 1 2 1 1]\n",
             "0.5714285714285714\n",
-            "Confusion Matrix:  [[1 0 0 0 0]\n",
-            " [0 2 0 0 0]\n",
-            " [0 1 0 1 0]\n",
+            "Confusion Matrix:  [[0 0 0 0 0]\n",
+            " [0 3 0 2 0]\n",
             " [0 0 1 0 0]\n",
-            " [0 0 0 1 0]]\n",
-            "Accuracy :  42.857142857142854\n"
+            " [0 0 0 0 0]\n",
+            " [1 0 0 0 0]]\n",
+            "Accuracy :  57.14285714285714\n"
           ]
         }
       ]
